2015-03-13  Kevin Ryde  <user42_kevin@yahoo.com.au>

	info-look fixes for Texinfo 5
	* info-look.el (c-mode, bison-mode, makefile-mode)
	(makefile-automake-mode, texinfo-mode, autoconf-mode, awk-mode)
	(latex-mode, emacs-lisp-mode, sh-mode, cfengine-mode): Match
	`foo' and 'foo' and ‘foo’ for @item and similar.
	(latex-mode): Match multi-arg \frac{num}{den} or \sqrt[root]{n} in
	suffix regexp.

2015-03-12  Juri Linkov  <juri@linkov.net>

	* simple.el (next-line-or-history-element)
	(previous-line-or-history-element): Remember the goal column of
	possibly multi-line input, and restore it afterwards.  (Bug#19824)

2015-03-12  Rasmus Pank Roulund  <emacs@pank.eu>

	* ido.el (ido-add-virtual-buffers-to-list): Include bookmark-alist
	files (bug#19335).

2015-03-12  Eli Zaretskii  <eliz@gnu.org>

	* international/fontset.el (script-representative-chars): Add a
	representative character for 'vai'.

2015-03-11  Stefan Monnier  <monnier@iro.umontreal.ca>

	* international/quail.el (quail-input-method):
	Use with-silent-modifications.

	* simple.el (goto-history-element): Don't burp on t history.

2015-03-10  Paul Eggert  <eggert@cs.ucla.edu>

	Prefer "initialize" to "initialise"
	* progmodes/js.el (js-indent-first-init):
	Rename from js-indent-first-initialiser, to avoid worrying about
	American vs British spelling.  All uses changed.

2015-03-10  Glenn Morris  <rgm@gnu.org>

	* progmodes/js.el (js-indent-first-initialiser):
	Fix doc, type, version.

2015-03-10  Jackson Ray Hamilton  <jackson@jacksonrayhamilton.com>

	* progmodes/js.el (js-indent-first-initialiser): New option.
	(js--maybe-goto-declaration-keyword-end): New function.
	(js--proper-indentation): Use js--maybe-goto-declaration-keyword-end.

2015-03-10  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* net/ldap.el (ldap-attribute-syntaxes-alist): Add LDAP attributes
	from RFC2798 Section 9.1.1.  (Bug#8983)

2015-03-09  Nicolas Petton <nicolas@petton.fr>

	* emacs-lisp/seq.el (seq-into): New function.