@@ -1,3 +1,7 @@
+2015-03-14  Daniel Colascione  <dancol@dancol.org>
+
+	* startup.el (command-line): Process "--no-x-resources".
+
 2015-03-13  Kevin Ryde  <user42_kevin@yahoo.com.au>
 
 	info-look fixes for Texinfo 5
